# ecmongpu

./: CMakeLists.txt  Readme.md
bench/: bench_monprod.cu
include/: cudautil.h  log.h
include/config/: config.h
include/ecc/: twisted_edwards.h
include/ecm/: ecm.h  factor_task.h  stage1.h
include/mp/: mp.h
src/: cuda-ecm.c  log.c
src/config/: config.cu  handler.cu
src/ecc/: naf.cu  tw_ed_common.cu  tw_ed_extended.cu  tw_ed_inverted.cu
src/ecm/: batch.cu  ecm.cu  factor_task.cu  stage1.cu  stage2.cu  tw_ed_extended.cu  tw_ed_inverted.cu
src/gmp_conv/: gmp_conversion.c
src/input/: file.c  parser.c  tcp.c
src/mp/: mp.cu  mp_montgomery.cu
tests/cpu/ecc/: test_ecc.c  test_point_on_curve.c
tests/cpu/mp_montgomery/: test_mp_monexp.c  test_mp_monprod.c
tests/gpu/ecc/: test_ecc.cu  test_point_on_curve.cu
tests/gpu/ecm/: test_bouvier8192.cu  test_naf_smul.cu  test_naf_smul_nafarr.cu  test_trpl_batch_smul.cu  test_trplchain_smul.cu
tests/gpu/mp/: test_mp_add.cu  test_mp_cmp.cu  test_mp_copy.cu  test_mp_gt.cu  test_mp_mul.cu  test_mp_sub.cu  test_mp_sub_mod.cu
tests/gpu/mp_montgomery/: test_mp_monexp.cu  test_mp_moninv.cu  test_mp_monprod.cu  test_mp_monprod_distinct.cu  test_mp_monsquare.cu
